import { EmployeeDashboardScreen } from '@/src/screens/employee/employee-dashboard-screen';

export default EmployeeDashboardScreen;
