export { EmployeeSettingsScreen as EmployeeProfileScreen } from '@/src/screens/employee/employee-settings-screen';
