...
        },
      ],
    );
  };

  return (
    <SafeAreaView style={styles.safeArea} testID="employee-open-shifts-screen">
      <FlatList
        contentContainerStyle={styles.content}
        data={data.openShifts}
        keyExtractor={(item) => item.id}
        renderItem={({ item, index }) => (
          <OpenShiftCard
...
